fix(webgl-media-editor): enabled marker not visible on submenu buttons

--- a/packages/webgl-media-editor/src/css/theme.css
+++ b/packages/webgl-media-editor/src/css/theme.css
@@ -46,7 +46,7 @@
 
   /* BUTTON ENABLED */
   .miru--button.miru--enabled::after {
-    background-color: var(--color-fnt-acc);
+    background-color: var(--color-bg-button-hover);
   }
 
   /* SLIDER */
